# SnakeGame_2D

./: CMakeLists.txt  README.md  main.cpp
1_Doc/: README.md
GameRecord/: GameTopscore.txt
inc/: controller.h  game.h  gameDataBase.hpp  gameDataBaseCfg.h  gameManager.hpp  gameManagerCfg.h  gameState.hpp  renderer.h  snake.h
src/: controller.cpp  game.cpp  gameDataBase.cpp  gameManager.cpp  renderer.cpp  snake.cpp
